syntax = "proto2";

import "club_notification.proto";
package bgs.protocol.club.v1;

option optimize_for = SPEED;
option cc_generic_services = false;

service ClubListener {
  option (.bgs.protocol.service_options) = {
    descriptor_name: "bnet.protocol.club.v1.ClubListener"
  };
  option (.bgs.protocol.sdk_service_options) = {
    inbound: true
  };
  rpc OnSubscribe(.bgs.protocol.club.v1.SubscribeNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 1
    };
  }
  rpc OnUnsubscribe(.bgs.protocol.club.v1.UnsubscribeNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 2
    };
  }
  rpc OnStateChanged(.bgs.protocol.club.v1.StateChangedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 3
    };
  }
  rpc OnSettingsChanged(.bgs.protocol.club.v1.SettingsChangedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 4
    };
  }
  rpc OnMemberAdded(.bgs.protocol.club.v1.MemberAddedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 30
    };
  }
  rpc OnMemberRemoved(.bgs.protocol.club.v1.MemberRemovedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 31
    };
  }
  rpc OnMemberStateChanged(.bgs.protocol.club.v1.MemberStateChangedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 32
    };
  }
  rpc OnSubscriberStateChanged(.bgs.protocol.club.v1.SubscriberStateChangedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 33
    };
  }
  rpc OnMemberRoleChanged(.bgs.protocol.club.v1.MemberRoleChangedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 34
    };
  }
  rpc OnInvitationAdded(.bgs.protocol.club.v1.InvitationAddedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 50
    };
  }
  rpc OnInvitationRemoved(.bgs.protocol.club.v1.InvitationRemovedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 51
    };
  }
  rpc OnSuggestionAdded(.bgs.protocol.club.v1.SuggestionAddedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 70
    };
  }
  rpc OnSuggestionRemoved(.bgs.protocol.club.v1.SuggestionRemovedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 71
    };
  }
  rpc OnStreamAdded(.bgs.protocol.club.v1.StreamAddedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 100
    };
  }
  rpc OnStreamRemoved(.bgs.protocol.club.v1.StreamRemovedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 101
    };
  }
  rpc OnStreamStateChanged(.bgs.protocol.club.v1.StreamStateChangedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 102
    };
  }
  rpc OnStreamMessageAdded(.bgs.protocol.club.v1.StreamMessageAddedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 150
    };
  }
  rpc OnStreamMessageUpdated(.bgs.protocol.club.v1.StreamMessageUpdatedNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 152
    };
  }
  rpc OnStreamTypingIndicator(.bgs.protocol.club.v1.StreamTypingIndicatorNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 153
    };
  }
  rpc OnStreamUnreadIndicator(.bgs.protocol.club.v1.StreamUnreadIndicatorNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 154
    };
  }
  rpc OnStreamAdvanceViewTime(.bgs.protocol.club.v1.StreamAdvanceViewTimeNotification) returns (.bgs.protocol.NO_RESPONSE) {
    option (.bgs.protocol.method_options) = {
      id: 155
    };
  }
}


